<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".csaPractical">

    <!-- TODO: Update blank fragment layout -->
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="@string/cpractical1" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="10sp"/>

    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/cpractical2" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/cpractical3" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/cpractical4" />
    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/cpractical5" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"/>

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/cpractical6" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/cpractical7" />
    </TableRow>


</TableLayout>